	- fl_read_image() now captures all pixels within the rectangle
	  described by its arguments, whether they belong to a GL scene
	  or not (STR #3142). It also captures subwindows of GL windows.
	- Fl::delete_widget() now hides the widget or window immediately
	  (i.e. when called) - only destruction is delayed as before.
	- The PostScript code output when printing images under Linux/Unix
	  is quite smaller due to use of lossless compression techniques.
	- The Linux/Unix printer dialog now uses BSD-style printing commands
	  (lpr/lpq) when SystemV-style commands (lp/lpstat) are not available.
	- Drawing alpha-blended images under X11 is now accelerated with
	  Xrender.
	- The font used for the FL_COURIER font family was changed on the Mac OS X
	  platform from 'Courier New' to 'Courier' because it was too thin.
	- Text drawing on the Mac platform supports Unicode 'variation selectors'
	  in the range [0xFE00-0xFE0F].
	- Added a Mac OS implementation of Fl_Window::wait_for_expose() that
	  became necessary with Mac OS 10.10 "Yosemite".
	- Added the libfltk target to the Xcode project producing a static
	  version of the FLTK library (Mac OS X).
	- Restored the possibility to call Fl::set_font() before main() starts.
	- Allow using the --enable-x11 configure option on the Mac OS platform
	  which produces an X11 version of the FLTK library (don't use that
	  unless you know what you do).
	- FLTK code and fluid-generated code can be used in static initializers.
	- Added light gray separator line to fluid widget browser (STR #2997).
	- Improve tooltip behavior for huge tooltips: remove flicker, support
	  key/mouse dismiss (STR #2650).
	- Many documentation improvements and fixes.
	- Removed many compilation warnings (STR #2988).
	- Fluid now generates code with less compiler warnings (STR #2813).
	- Many CMake improvements and fixes. Note: CMake is mostly operating
	  now, but not yet recommended for production use. Please test and
	  report issues.