@@ -60,8 +60,10 @@
 #else /* X11 */
 #  include <sys/types.h>
 #  include <sys/stat.h>
-#  include <X11/Xlocale.h>
-#  include <X11/Xlib.h>
+#  if defined(FL_LIBRARY) /* don't expose X11 headers in user space */
+#    include <X11/Xlocale.h>
+#    include <X11/Xlib.h>
+#  endif /* defined(FL_LIBRARY) -- don't expose X11 headers in user space */
 #  include <locale.h>
 #  define xchar unsigned short
 #endif
