@@ -60,6 +60,8 @@ CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? 2016
 	  or not (STR #3142). It also captures subwindows of GL windows.
 	- Fl::delete_widget() now hides the widget or window immediately
 	  (i.e. when called) - only destruction is delayed as before.
+	- FLTK header files don't expose X11 definitions in user code any more
+	  unless required by including FL/x.H explicitly or implicitly.
 	- The PostScript code output when printing images under Linux/Unix
 	  is quite smaller due to use of lossless compression techniques.
 	- The Linux/Unix printer dialog now uses BSD-style printing commands
